--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
     <div class="container">
       <dialog>
         <form method="dialog">
-          <h3 class="m-b-10">Hello world</h3>
+          <h2 class="m-b-10">Hello world</h2>
           <section>
+            <img src="images/earth-100-100.jpg" />
             Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
           </section>
           <menu>
