--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
       </header>
       <main>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          <button class="open">Open modal</button>
+          A demo of a modal which uses the HTML dialog. Find out more about the <code>method="dialog"</code> <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/dialog" target="_blank">here</a>, the <code>cancel</code> event <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLDialogElement/cancel_event" target="_blank">here</a> and the <code>::backdrop</code> pseudo-element <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/::backdrop" target="_blank">here</a>. Unfortunately, the dialog tag <a href="https://caniuse.com/?search=dialog" target="_blank">isn't supported</a> in many browsers. Try it out here: <button class="open">Open modal</button>
         </p>
         <p>
           Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -32,7 +31,7 @@
       </main>
 
       <footer class="p-10">
-        <p class="text-center">&copy; Ontrack 2020</p>
+        <p class="text-center">&copy; modal world 2020</p>
       </footer>
 
     </article>
